z-index fix to display browser warning to IE7

--- a/regserver/regulations/static/regulations/css/less/main.less
+++ b/regserver/regulations/static/regulations/css/less/main.less
@@ -54,6 +54,7 @@ Media Queries
     font-family: Arial, sans-serif;
     font-weight: bold;
     padding: 10px 15px;
+    z-index: 999999;
  }
 
 /*.lt-ie10 {
